end devel session and fix post submition/session architecture
